--- a/.github/workflows/build-immortalwrt-mc-mac1200r.yml
+++ b/.github/workflows/build-immortalwrt-mc-mac1200r.yml
@@ -2,7 +2,7 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt (Image Builder) MAR1200r
+name: Build ImmortalWrt (Image Builder) MAR1200r
 
 on:
   workflow_dispatch:
