--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -2,7 +2,7 @@
 # Author(s): Việt Anh Bùi | https://github.com/vietanhbui2000 #
 ###############################################################
 
-name: Build OpenWrt (Image Builder) MAR1200r
+name: Build Image OpenWrt
 
 on:
   workflow_dispatch:
