--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -31,11 +31,9 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential ccache ecj fastjar file g++ gawk \
-        gettext git java-propose-classpath libelf-dev libncurses5-dev \
-        libncursesw5-dev libssl-dev python python2.7-dev python3 unzip wget \
-        python3-distutils python3-setuptools python3-dev rsync subversion \
-        swig time xsltproc zlib1g-dev
+        sudo -E apt-get -y install build-essential clang flex bison g++ gawk \
+        gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
+        python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
