--- a/.github/workflows/build-image-openwrt.yml
+++ b/.github/workflows/build-image-openwrt.yml
@@ -33,7 +33,7 @@ jobs:
         sudo -E apt-get update
         sudo -E apt-get -y install build-essential clang flex bison g++ gawk \
         gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
-        python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget
+        python3-distutils python3-setuptools python2 rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
 
